--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
     </section>
 
-    <section class="works-section">
+    <section class="works-section section">
         <div class="works-section__container container">
         <h2 class="works-section__title">Чим ми займаємося</h2>
          <ul class="works-section__list list">
@@ -273,43 +273,43 @@
         </ul>
         </div>
     </section>
-    <section class="partners-section">
-        <div class="partners-section__container container">
-            <h2 class="partners-section__title">Постійні клієнти</h2>
-            <ul class="partners-section__list list">
-                <li><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
+<section class="partners-section section">
+    <div class="partners-section__container container">
+        <h2 class="partners-section__title">Постійні клієнти</h2>
+        <ul class="partners-section__list list">
+            <li><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
                     <svg class="partners-section__icon" width="106px" height="60px">
                         <use href="./images/icons.svg#icon-Logo1"></use>
                     </svg></a>
-                </li>
-                <li><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
-                        <svg class="partners-section__icon" width="106px" height="60px">
-                            <use href="./images/icons.svg#icon-Logo2"></use>
-                        </svg></a>
-                </li>
-                <li><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
-                        <svg class="partners-section__icon" width="106px" height="60px">
-                            <use href="./images/icons.svg#icon-Logo3"></use>
-                        </svg></a>
-                </li>
-                <li><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
-                        <svg class="partners-section__icon" width="106px" height="60px">
-                            <use href="./images/icons.svg#icon-Logo4"></use>
-                        </svg></a>
-                </li>
-                <li><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
-                        <svg class="partners-section__icon" width="106px" height="60px">
-                            <use href="./images/icons.svg#icon-Logo5"></use>
-                        </svg></a>
-                </li>
-                <li><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
-                        <svg class="partners-section__icon" width="106px" height="60px">
-                            <use href="./images/icons.svg#icon-Logo6"></use>
-                        </svg></a>
-                </li>
-            </ul>
-        </div>
-    </section>
+            </li>
+            <li><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
+                    <svg class="partners-section__icon" width="106px" height="60px">
+                        <use href="./images/icons.svg#icon-Logo2"></use>
+                    </svg></a>
+            </li>
+            <li><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
+                    <svg class="partners-section__icon" width="106px" height="60px">
+                        <use href="./images/icons.svg#icon-Logo3"></use>
+                    </svg></a>
+            </li>
+            <li><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
+                    <svg class="partners-section__icon" width="106px" height="60px">
+                        <use href="./images/icons.svg#icon-Logo4"></use>
+                    </svg></a>
+            </li>
+            <li><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
+                    <svg class="partners-section__icon" width="106px" height="60px">
+                        <use href="./images/icons.svg#icon-Logo5"></use>
+                    </svg></a>
+            </li>
+            <li><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
+                    <svg class="partners-section__icon" width="106px" height="60px">
+                        <use href="./images/icons.svg#icon-Logo6"></use>
+                    </svg></a>
+            </li>
+        </ul>
+    </div>
+</section>
 </main>   
 <footer class="footer">
     <div class="footer__container container">
@@ -379,52 +379,52 @@
 </footer>
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
-        <button class="modal-btn is-hidden" type="button" data-modal-close>
-            <svg class="modal-icon" width="18px" height="18px">
+        <button class="modal__btn is-hidden" type="button" data-modal-close>
+            <svg class="modal__icon" width="18px" height="18px">
                 <use href="./images/icons.svg#icon-close-icon"></use>
             </svg>
         </button>
-        <h2 class="modal-title">Залиште свої дані, ми вам передзвонимо</h2>
-        <form class="modal-form">
-            <label class="form-label">Ім'я
-                <div class="form-group" role="group">
-                    <input type="text" class="form-input">
-                    <svg class="form-icon" width="18px" height="18px">
+        <h2 class="modal__title">Залиште свої дані, ми вам передзвонимо</h2>
+        <form class="form">
+            <label class="form__label">Ім'я
+                <div class="form__group" role="group">
+                    <input type="text" class="form__input">
+                    <svg class="form__icon" width="18px" height="18px">
                         <use href="./images/icons.svg#icon-person-black"></use>
                     </svg>
                 </div>
             </label>
-            <label class="form-label">Телефон
-                <div class="form-group" role="group">
-                    <input type="tel" name="phone_number" class="form-input">
-                    <svg class="form-icon" width="18px" height="18px">
+            <label class="form__label">Телефон
+                <div class="form__group" role="group">
+                    <input type="tel" name="phone_number" class="form__input">
+                    <svg class="form__icon" width="18px" height="18px">
                         <use href="./images/icons.svg#icon-phone-black"></use>
                     </svg>
                 </div>
             </label>
-            <label class="form-label">Пошта
-                <div class="form-group" role="group">
-                    <input type="email" name="email" class="form-input">
-                    <svg class="form-icon" width="18px" height="18px">
+            <label class="form__label">Пошта
+                <div class="form__group" role="group">
+                    <input type="email" name="email" class="form__input">
+                    <svg class="form__icon" width="18px" height="18px">
                         <use href="./images/icons.svg#icon-email-black"></use>
                     </svg>
                 </div>
             </label>
-            <label class="textarea-label">Коментар
-                <div class="form-group" role="group">
-                    <textarea name="feedback" rows="6" placeholder="Введіть текст" class="form-textarea"></textarea>
+            <label class="form__textarea-label">Коментар
+                <div class="form__group" role="group">
+                    <textarea name="feedback" rows="6" placeholder="Введіть текст" class="form__textarea"></textarea>
                 </div>
             </label>
-            <div class="form-checkbox" role="group">
-                <input type="checkbox" name="policy" id="checkbox" class="input-check">
-                <span class="checkbox-icon"></span>
+            <div class="form__checkbox" role="group">
+                <input type="checkbox" name="policy" id="checkbox" class="form__input-check">
+                <span class="form__checkbox-icon"></span>
             
-                <label class="check-label" for="checkbox">
+                <label class="form__check-label" for="checkbox">
                     Погоджуюся з розсилкою та приймаю
-                    <a href="" class="form-link">Умови договору</a>
+                    <a href="" class="form__link">Умови договору</a>
                 </label>
             </div>
-            <button type="submit" class="modal-form-btn">Відправити</button>
+            <button type="submit" class="form__modal-form-btn">Відправити</button>
             </form>
     </div>
 </div>
