--- a/portfolio.html
+++ b/portfolio.html
@@ -41,192 +41,192 @@
 </header>
     <main>
        
-        <section class="section">
-            <div class="container">
-            <h1 class="hidden-title">Проекти</h1>
-            <ul class="button-list list">
-                <li><button class="button" type="button">Усі</button></li>
-                <li><button class="button" type="button">Веб-сайти</button></li>
-                <li><button class="button" type="button">Додатки</button></li>
-                <li><button class="button" type="button">Дизайн</button></li>
-                <li><button class="button" type="button">Маркетинг</button></li>
+        <section class="projects-section section">
+            <div class="projects-section__container container">
+            <h1 class="projects-section__hidden-title">Проекти</h1>
+            <ul class="projects-section__button-list list">
+                <li><button class="projects-section__button" type="button">Усі</button></li>
+                <li><button class="projects-section__button" type="button">Веб-сайти</button></li>
+                <li><button class="projects-section__button" type="button">Додатки</button></li>
+                <li><button class="projects-section__button" type="button">Дизайн</button></li>
+                <li><button class="projects-section__button" type="button">Маркетинг</button></li>
             </ul>
-            <ul class="projects-list list">
-                <li class="projects-item">
-                    <div class="project-thumb">
-                    <a class="project-link link" href="" target="_blank" rel="noreferrer noopener">
-                        <img class="project-img" src="./images/portfolio/notebook.jpg" alt="Технокряк" width="370" height="294">
+            <ul class="projects-section__list list">
+                <li class="projects-section__item">
+                    <div class="projects-section__thumb">
+                    <a class="projects-section__link link" href="" target="_blank" rel="noreferrer noopener">
+                        <img class="projects-section__img" src="./images/portfolio/notebook.jpg" alt="Технокряк" width="370" height="294">
                     </a>
-                    <div class="project-overlay">
-                        <p class="overlay-text">
+                    <div class="projects-section__overlay">
+                        <p class="projects-section__text">
                             Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
                             вичерпні відомості про компанію чи приватну особу.
                         </p>
                     </div>
                     </div>
-                    <div class="project">
-                    <h2 class="title">Технокряк</h2>
-                    <p class="desc">
+                    <div class="projects-section__div">
+                    <h2 class="projects-section__title">Технокряк</h2>
+                    <p class="projects-section__desc">
                         Веб-сайт
                     </p>
                     </div>
                 </li>
-                <li class="projects-item">
-                    <div class="project-thumb">
-                    <a class="project-link link" href="" target="_blank" rel="noreferrer noopener">
-                        <img class="project-img" src="./images/portfolio/basketball.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                <li class="projects-section__item">
+                    <div class="projects-section__thumb">
+                    <a class="projects-section__link link" href="" target="_blank" rel="noreferrer noopener">
+                        <img class="projects-section__img" src="./images/portfolio/basketball.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
                     </a>
-                    <div class="project-overlay">
-                        <p class="overlay-text">
+                    <div class="projects-section__overlay">
+                        <p class="projects-section__text">
                             Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
                             отримати
                             вичерпні відомості про компанію чи приватну особу.
                         </p>
                     </div>
                     </div>
-                    <div class="project">
-                    <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                    <p class="desc">
+                    <div class="projects-section__div">
+                    <h2 class="projects-section__title">Постер New Orlean vs Golden Star</h2>
+                    <p class="projects-section__desc">
                         Дизайн.
                     </p>
                     </div>
                 </li>
-                <li class="projects-item">
-                    <div class="project-thumb">
-                    <a class="project-link link" href="" target="_blank" rel="noreferrer noopener">
-                        <img class="project-img" src="./images/portfolio/seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
+                <li class="projects-section__item">
+                    <div class="projects-section__thumb">
+                    <a class="projects-section__link link" href="" target="_blank" rel="noreferrer noopener">
+                        <img class="projects-section__img" src="./images/portfolio/seafood.jpg" alt="Ресторан Seafood" width="370" height="294">
                     </a>
-                    <div class="project-overlay">
-                        <p class="overlay-text">
+                    <div class="projects-section__overlay">
+                        <p class="projects-section__text">
                             Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
                             отримати
                             вичерпні відомості про компанію чи приватну особу.
                         </p>
                     </div>
                     </div>
-                    <div class="project">
-                    <h2 class="title">Ресторан Seafood</h2>
-                    <p class="desc">
+                    <div class="projects-section__div">
+                    <h2 class="projects-section__title">Ресторан Seafood</h2>
+                    <p class="projects-section__desc">
                         Додаток
                     </p>
                     </div>
                 </li>
-                <li class="projects-item">
-                    <div class="project-thumb">
-                    <a class="project-link link" href="" target="_blank" rel="noreferrer noopener">
-                        <img class="project-img" src="./images/portfolio/headphones.jpg" alt="Проєкт Prime" width="370" height="294">
+                <li class="projects-section__item">
+                    <div class="projects-section__thumb">
+                    <a class="projects-section__link link" href="" target="_blank" rel="noreferrer noopener">
+                        <img class="projects-section__img" src="./images/portfolio/headphones.jpg" alt="Проєкт Prime" width="370" height="294">
                     </a>
-                    <div class="project-overlay">
-                        <p class="overlay-text">
+                    <div class="projects-section__overlay">
+                        <p class="projects-section__text">
                             Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
                             отримати
                             вичерпні відомості про компанію чи приватну особу.
                         </p>
                     </div>
                     </div>
-                    <div class="project">
-                    <h2 class="title">Проєкт Prime</h2>
-                    <p class="desc">
+                    <div class="projects-section__div">
+                    <h2 class="projects-section__title">Проєкт Prime</h2>
+                    <p class="projects-section__desc">
                         Маркетинг
                     </p>
                     </div>
                 </li>
-                <li class="projects-item">
-                    <div class="project-thumb">
-                    <a class="project-link link" href="" target="_blank" rel="noreferrer noopener">
-                        <img class="project-img" src="./images/portfolio/boxes.jpg" alt="Проєкт Boxes" width="370" height="294">
+                <li class="projects-section__item">
+                    <div class="projects-section__thumb">
+                    <a class="projects-section__link link" href="" target="_blank" rel="noreferrer noopener">
+                        <img class="projects-section__img" src="./images/portfolio/boxes.jpg" alt="Проєкт Boxes" width="370" height="294">
                     </a>
-                    <div class="project-overlay">
-                        <p class="overlay-text">
+                    <div class="projects-section__overlay">
+                        <p class="projects-section__text">
                             Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
                             отримати
                             вичерпні відомості про компанію чи приватну особу.
                         </p>
                     </div>
                     </div>
-                    <div class="project">
-                    <h2 class="title">Проєкт Boxes</h2>
-                    <p class="desc">
+                    <div class="projects-section__div">
+                    <h2 class="projects-section__title">Проєкт Boxes</h2>
+                    <p class="projects-section__desc">
                         Додаток
                     </p>
                     </div>
                 </li>
-                <li class="projects-item">
-                    <div class="project-thumb">
-                    <a class="project-link link" href="" target="_blank" rel="noreferrer noopener">
-                    <img class="project-img" src="./images/portfolio/display.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                <li class="projects-section__item">
+                    <div class="projects-section__thumb">
+                    <a class="projects-section__link link" href="" target="_blank" rel="noreferrer noopener">
+                    <img class="projects-section__img" src="./images/portfolio/display.jpg" alt="Inspiration has no Borders" width="370" height="294">
                     </a>
-                    <div class="project-overlay">
-                        <p class="overlay-text">
+                    <div class="projects-section__overlay">
+                        <p class="projects-section__text">
                             Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
                             отримати
                             вичерпні відомості про компанію чи приватну особу.
                         </p>
                     </div>
                     </div>
-                    <div class="project">
-                    <h2 class="title">Inspiration has no Borders</h2>
-                    <p class="desc">
+                    <div class="projects-section__div">
+                    <h2 class="projects-section__title">Inspiration has no Borders</h2>
+                    <p class="projects-section__desc">
                         Веб-сайт
                     </p>
                     </div>
                 </li>
-                <li class="projects-item">
-                    <div class="project-thumb">
-                    <a class="project-link link" href="" target="_blank" rel="noreferrer noopener">
-                        <img class="project-img" src="./images/portfolio/book.jpg" alt="Видання Limited Edition" width="370" height="294">
+                <li class="projects-section__item">
+                    <div class="projects-section__thumb">
+                    <a class="projects-section__link link" href="" target="_blank" rel="noreferrer noopener">
+                        <img class="projects-section__img" src="./images/portfolio/book.jpg" alt="Видання Limited Edition" width="370" height="294">
                     </a>
-                    <div class="project-overlay">
-                        <p class="overlay-text">
+                    <div class="projects-section__overlay">
+                        <p class="projects-section__text">
                             Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
                             отримати
                             вичерпні відомості про компанію чи приватну особу.
                         </p>
                     </div>
                     </div>
-                    <div class="project">
-                    <h2 class="title">Видання Limited Edition</h2>
-                    <p class="desc">
+                    <div class="projects-section__div">
+                    <h2 class="projects-section__title">Видання Limited Edition</h2>
+                    <p class="projects-section__desc">
                         Дизайн
                     </p>
                     </div>
                 </li>
-                <li class="projects-item">
-                   <div class="project-thumb"> 
-                    <a class="project-link link" href="" target="_blank" rel="noreferrer noopener">
-                        <img class="project-img" src="./images/portfolio/tag.jpg" alt="Проєкт LAB" width="370" height="294">
+                <li class="projects-section__item">
+                   <div class="projects-section__thumb"> 
+                    <a class="projects-section__link link" href="" target="_blank" rel="noreferrer noopener">
+                        <img class="projects-section__img" src="./images/portfolio/tag.jpg" alt="Проєкт LAB" width="370" height="294">
                     </a>
-                    <div class="project-overlay">
-                        <p class="overlay-text">
+                    <div class="projects-section__overlay">
+                        <p class="projects-section__text">
                             Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
                             отримати
                             вичерпні відомості про компанію чи приватну особу.
                         </p>
                     </div>
                     </div>
-                    <div class="project">
-                    <h2 class="title">Проєкт LAB</h2>
-                    <p class="desc">
+                    <div class="projects-section__div">
+                    <h2 class="projects-section__title">Проєкт LAB</h2>
+                    <p class="projects-section__desc">
                         Маркетинг
                     </p>
                     </div>
                 </li>
-                <li class="projects-item">
-                   <div class="project-thumb">
-                    <a class="project-link link" href="" target="_blank" rel="noreferrer noopener">
-                        <img class="project-img" src="./images/portfolio/leptop.jpg" alt="Growing Business" width="370" height="294">
+                <li class="projects-section__item">
+                   <div class="projects-section__thumb">
+                    <a class="projects-section__link link" href="" target="_blank" rel="noreferrer noopener">
+                        <img class="projects-section__img" src="./images/portfolio/leptop.jpg" alt="Growing Business" width="370" height="294">
                     </a>
-                    <div class="project-overlay">
-                        <p class="overlay-text">
+                    <div class="projects-section__overlay">
+                        <p class="projects-section__text">
                             Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
                             отримати
                             вичерпні відомості про компанію чи приватну особу.
                         </p>
                     </div>
                     </div>
-                    <div class="project">
-                    <h2 class="title">Growing Business</h2>
-                    <p class="desc">
+                    <div class="projects-section__div">
+                    <h2 class="projects-section__title">Growing Business</h2>
+                    <p class="projects-section__desc">
                         Додаток
                     </p>
                     </div>
