--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </ul>
             </div>
             <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
-                <svg width="40px" height="40px">
+                <svg class="menu-toggle__icon" width="40px" height="40px">
                     <use href="./images/icons.svg#icon-menu"></use>
                 </svg>
             </button>
@@ -440,20 +440,20 @@
             <use href="./images/icons.svg#icon-close-menu"></use>
         </svg>
     </button>
-    <ul class="mobile-menu">
-        <li class="mobile-menu__item"><a href="./index.html" class="mobile-menu__link link">Студія</a></li>
+    <ul class="mobile-menu list">
+        <li class="mobile-menu__item"><a href="./index.html" class="mobile-menu__link link current">Студія</a></li>
         <li class="mobile-menu__item"><a href="./portfolio.html" class="mobile-menu__link link">Портфоліо</a></li>
         <li class="mobile-menu__item"><a href="/index.html" class="mobile-menu__link link">Контакти</a></li>
     </ul>
-    <ul class="contacts-menu">
-        <li class="contacts-menu__item">+1 212-772-4150</li>
-        <li class="contacts-menu__item">info@devstudio.com</li>
+    <ul class="contacts-menu list">
+        <li class="contacts-menu__item"><a class="contacts-menu__tel link" href="">+1 212-772-4150</a></li>
+        <li class="contacts-menu__item"><a class="contacts-menu__mail link" href="">info@devstudio.com</a></li>
     </ul>
-    <ul class="socials-menu">
-        <li class="socials-menu__item"><a href="">Instagram</a></li>
-        <li class="socials-menu__item"><a href="">Twitter</a></li>
-        <li class="socials-menu__item"><a href="">Facebook</a></li>
-        <li class="socials-menu__item"><a href="">LinkedIn</a></li>
+    <ul class="socials-menu list">
+        <li class="socials-menu__item"><a class="socials-menu__link link" href="/">Instagram</a></li>
+        <li class="socials-menu__item"><a class="socials-menu__link link" href="/">Twitter</a></li>
+        <li class="socials-menu__item"><a class="socials-menu__link link" href="/">Facebook</a></li>
+        <li class="socials-menu__item"><a class="socials-menu__link link" href="/">LinkedIn</a></li>
     </ul>
 </div>
 
