--- a/index.html
+++ b/index.html
@@ -325,9 +325,9 @@
     <address>
     <ul class="footer__address list">
     
-        <li class="footer__addres-item"><a href="https://goo.gl/maps/pwcy8Wqo1RzwF6ERA" target="_blank" rel="noreferrer noopener" class="footer__map">м. Київ, пр-т Лесі Українки, 26</a></li>
-        <li class="footer__addres-item"><a href="info@devstudio.com" class="footer__contact-info footer__contact-info--mail">info@devstudio.com</a></li>
-        <li class="footer__addres-item"><a href="+380961111111" class="footer__contact-info">+38 096 111 11 11</a></li>
+        <li class="footer__addres-item"><a href="https://goo.gl/maps/pwcy8Wqo1RzwF6ERA" target="_blank" rel="noreferrer noopener" class="footer__map link">м. Київ, пр-т Лесі Українки, 26</a></li>
+        <li class="footer__addres-item"><a href="info@devstudio.com" class="footer__contact-info link">info@devstudio.com</a></li>
+        <li class="footer__addres-item"><a href="+380961111111" class="footer__contact-info link">+38 096 111 11 11</a></li>
     
     </ul>
   </address>
