--- a/index.html
+++ b/index.html
@@ -135,7 +135,17 @@
         <h2 class="team-section__title">Наша команда</h2>
         <ul class="team-section__list list">
             <li class="team-section__item">
-                <img src="./images/p1.jpg" alt="Ігор Дем'яненко" width="270" >
+                <img 
+                srcset="
+                ./images/team/img-1_270.jpg 270w,
+                ./images/team/img-1_354.jpg 354w,
+                ./images/team/img-1_450.jpg 450w,
+                ./images/team/img-1_540.jpg 540w, 
+                ./images/team/img-1_708.jpg 708w,
+                ./images/team/img-1_900.jpg 900w
+                "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                src="./images/team/img-1_450.jpg" alt="Ігор Дем'яненко" width="450" >
                 <div class="team-section__team1">
                 <h3 class="team-section__name">Ігор Дем'яненко</h3>
                 <p lang="en" class="team-section__direction">
@@ -171,7 +181,17 @@
                 
             </li>
             <li class="team-section__item">
-                <img src="./images/p2.jpg" alt="Ольга Рєпіна" width="270" >
+                <img 
+                srcset="
+                ./images/team/img-2_270.jpg 270w,
+                ./images/team/img-2_354.jpg 354w,
+                ./images/team/img-2_450.jpg 450w,
+                ./images/team/img-2_540.jpg 540w, 
+                ./images/team/img-2_708.jpg 708w,
+                ./images/team/img-2_900.jpg 900w
+                "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                src="./images/team/img-2_450.jpg" alt="Ольга Рєпіна" width="450" >
                 <div class="team-section__team2">
                 <h3 class="team-section__name">Ольга Рєпіна</h3>
                 <p lang="en" class="team-section__direction">
@@ -206,7 +226,17 @@
                 </div>
             </li>
             <li class="team-section__item">
-                <img src="./images/p3.jpg" alt="Микола Тарасов" width="270" >
+                <img 
+                srcset="
+                ./images/team/img-3_270.jpg 270w,
+                ./images/team/img-3_354.jpg 354w,
+                ./images/team/img-3_450.jpg 450w,
+                ./images/team/img-3_540.jpg 540w, 
+                ./images/team/img-3_708.jpg 708w,
+                ./images/team/img-3_900.jpg 900w
+                "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                src="./images/team/img-3_450.jpg" alt="Микола Тарасов" width="450" >
                 <div class="team-section__team3">
                 <h3 class="team-section__name">Микола Тарасов</h3>
                 <p lang="en" class="team-section__direction">
@@ -241,7 +271,17 @@
                 </div>
             </li>
             <li class="team-section__item">
-                <img src="./images/p4.jpg" alt="Михайло Єрмаков" width="270" >
+                <img 
+                srcset="
+                ./images/team/img-4_270.jpg 270w,
+                ./images/team/img-4_354.jpg 354w,
+                ./images/team/img-4_450.jpg 450w,
+                ./images/team/img-4_540.jpg 540w, 
+                ./images/team/img-4_708.jpg 708w,
+                ./images/team/img-4_900.jpg 900w
+                "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                src="./images/team/img-4_450.jpg" alt="Михайло Єрмаков" width="450" >
                 <div class="team-section__team4">
                 <h3 class="team-section__name">Михайло Єрмаков</h3>
                 <p lang="en" class="team-section__direction">
