--- a/index.html
+++ b/index.html
@@ -322,32 +322,32 @@
     <div class="partners-section__container container">
         <h2 class="partners-section__title">Постійні клієнти</h2>
         <ul class="partners-section__list list">
-            <li><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
+            <li class="partners-section__item"><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
                     <svg class="partners-section__icon" width="106px" height="60px">
                         <use href="./images/icons.svg#icon-Logo1"></use>
                     </svg></a>
             </li>
-            <li><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
+            <li class="partners-section__item"><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
                     <svg class="partners-section__icon" width="106px" height="60px">
                         <use href="./images/icons.svg#icon-Logo2"></use>
                     </svg></a>
             </li>
-            <li><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
+            <li class="partners-section__item"><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
                     <svg class="partners-section__icon" width="106px" height="60px">
                         <use href="./images/icons.svg#icon-Logo3"></use>
                     </svg></a>
             </li>
-            <li><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
+            <li class="partners-section__item"><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
                     <svg class="partners-section__icon" width="106px" height="60px">
                         <use href="./images/icons.svg#icon-Logo4"></use>
                     </svg></a>
             </li>
-            <li><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
+            <li class="partners-section__item"><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
                     <svg class="partners-section__icon" width="106px" height="60px">
                         <use href="./images/icons.svg#icon-Logo5"></use>
                     </svg></a>
             </li>
-            <li><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
+            <li class="partners-section__item"><a class="partners-section__link link" href="" target="_blank" rel="noreferrer noopener">
                     <svg class="partners-section__icon" width="106px" height="60px">
                         <use href="./images/icons.svg#icon-Logo6"></use>
                     </svg></a>
