--- a/index.html
+++ b/index.html
@@ -108,19 +108,25 @@
          <ul class="works-section__list list">
             
             <li class="works-section__item">
-                <img src="./images/imgc.jpg" alt="Десктопні додатки" width="370" >
+                <img 
+                srcset="./images/works/img-1_370.jpg 1x, ./images/works/img-1_740.jpg 2x"
+                src="./images/imgc.jpg" alt="Десктопні додатки" width="370" >
                 <div class="works-section__overlay">
                     <p class="works-section__div-title">Десктопні додатки</p>
                 </div>
             </li>
             <li class="works-section__item">
-                <img src="./images/imgp.jpg" alt="Мобільні додатки" width="370" >
+                <img 
+                srcset="./images/works/img-2_370.jpg 1x, ./images/works/img-2_740.jpg 2x"
+                src="./images/imgp.jpg" alt="Мобільні додатки" width="370" >
                 <div class="works-section__overlay">
                     <p class="works-section__div-title">Мобільні додатки</p>
                 </div>
             </li>
             <li class="works-section__item">
-                <img src="./images/imgt.jpg" alt="Дизайнерські рішення" width="370" >
+                <img 
+                srcset="./images/works/img-3_370.jpg 1x, ./images/works/img-3_740.jpg 2x"
+                src="./images/imgt.jpg" alt="Дизайнерські рішення" width="370" >
                 <div class="works-section__overlay">
                     <p class="works-section__div-title">Дизайнерські рішення</p>
                 </div>
